--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body {
     border-bottom: 1px solid rgb(74, 147, 255);
     padding: .3rem;
     margin: .5rem;
+    outline: none;
 }
 
 input::-webkit-outer-spin-button,
